<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_declaresUnavailability"
            android:icon="@drawable/ic_block_black_24dp"
            android:title="@string/declaresUnavailability" />
    </group>

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/nav_pianifications"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/pianifications" />
            <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/messages" />
            <item
                android:id="@+id/nav_helpline"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/helpline" />
            <item
                android:id="@+id/nav_myAccount"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/myAccount" />
            <item
                android:id="@+id/nav_associatedDevices"
                android:icon="@drawable/ic_devices_other_black_24dp"
                android:title="@string/simulatore_dispositivo" />
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logOut" />
        </menu>
    </item>

</menu>
